@@ -877,6 +877,9 @@ Release 2.7.0 - UNRELEASED
     HDFS-8008. Support client-side back off when the datanodes are congested.
     (wheat9)
 
+    HDFS-7811. Avoid recursive call getStoragePolicyID in
+    INodeFile#computeQuotaUsage. (Xiaoyu Yao and jing9)
+
   OPTIMIZATIONS
 
     HDFS-7454. Reduce memory footprint for AclEntries in NameNode.
